finalizado a página de produtos e corrigido oemail do caontato

--- a/contato.html
+++ b/contato.html
@@ -84,13 +84,13 @@
                         Estamos aqui para atender você, conhecer suas necessidades e responder suas dúvidas. Faça um orçamento sem compromisso.
                     </p>
                     <p class="font-weight-bold h5 mb-1 mt-5">
-                        <i class="bi bi-whatsapp"></i>&nbsp;<span> (11) 96258 - 4708</span>
+                        <a href=""><i class="bi bi-whatsapp" style="color: green;"></i>&nbsp;<span class="text-dark"> (11) 96258 - 4708</span></a>
                         <p class="mb-4">
                             Seg. a Sex: 08hs às 17:30
                         </p>
                     </p>
                     <p class="font-weight-bold h5 mb-5">
-                        <i class="bi bi-envelope"></i><span>&nbsp; dmdmembranas@gmail.com</span>
+                        <a href=""><i class="bi bi-envelope" style="color: rgb(153, 105, 0);"></i><span class="span-email text-dark">&nbsp; dmdmembranas@gmail.com</span></a>
                     </p>
                     <p class="text-danger mb-5">
                         Os campos com * são obrigatorios, para o envio do formulário.
