--- a/produtos.html
+++ b/produtos.html
@@ -70,65 +70,170 @@
     </section>
     <!--FIM SECTION PRODUTOS INICIAL-->
     <!--INICIO SECTION PRODUTOS SECUNDARIA-->
-    <section id="section-produtos" class=" overflow-hidden">
-        <div class="container ">
-            <div class="row container-content-produtos">
-                <div class="row justify-content-around mt-5">
-                    <div class="col-md-12 mb-5">
+    <main>
+
+        <section>
+            <div class="container mt-5">
+                <div class="row">
+                    <div class="col-md-12  mb-5">
                         <h2 class="text-white mb-2 bg-primary p-2">Teclados de Membrana</h2>
                     </div>
-                    <div class="col-lg-5 col-md-12 mt-5 mt-sm-0 mb-5 ">
-                        <div class="produtos-content">
-                            <img src="assets/img/jpg/membrana.jpg" class="img-fluid rounded-3" alt="">
-                        </div>
-                    </div>
-                    <div class="col-lg-7 col-md-12 align-self-center text-dark">
-                        <p style="width: 100%;font-size: 18px; text-align: start; ">Confeccionados em policarbonato cristal ou texturizado, com ou sem a aplicação de textura seletiva.Fabricados em impressão (silk ). O circuito elétrico é feito com prata condutiva, cuarada em alta temperatura.
-                        </p>
-                        <a href="./produtos/teclado-de-membrana.html" class="btn btn-danger border-1 mb-md-5 mb-sm-5">Saiba Mais</a>
-                    </div>
                 </div>
-
-                <div class="row justify-content-around mt-5 ">
-                    <div class="col-md-12 mb-5 ">
-                        <h2 class="text-white mb-2 bg-primary p-2 ">Painéis Frontais</h2>
+                <div class="row justify-content-center">
+                    <div class="col-md-6 mb-5 img-produtos">
+                        <img src="./assets/img/jpg/membrana.jpg" class="img-fluid" style="width: 500px;" alt="">
                     </div>
-                    <div class="col-lg-7 col-md-12 align-self-center text-dark">
-                        <p style="width: 100%;font-size: 18px; text-align: start; ">Os Painéis Frontais são produzidos com matéria prima de alta qualidade, e rigoroso controle de qualidade. São oferecidos com vários tipos de acabamento como:
-
-                            <div class="container-fluid text-start text-dark div-span-produtos" style="font-size: 18px; ">
-                                <span>* Visores transparentes ou coloridos.</span><br>
-                                <span>* Texturização seletiva.</span><br>
-                                <span>* Impressão em quadricomia.</span><br>
-                                <span>* Alto relevo e molduras.</span>
-                            </div>
+                    <div class="col-md-6 text-dark">
+                        <p style="width: 100%;font-size: 18px; text-align: start; ">Confeccionados em policarbonato cristal ou texturizado, com ou sem a aplicação de textura seletiva. Fabricados em impressão (silk ). O circuito elétrico é feito com prata condutiva, cuarada em alta temperatura.<strong class="text-danger"> Teclados de membrana possuem um frontal com superfície plana e flexível</strong>                            em que as teclas são impressas. Construído com finas folhas de policarbonato e poliéster que contêm circuitos flexíveis impressos com tinta eletricamente condutora. Sob um filme de policarbonato ou poliéster há um espaçador
+                            vazado onde se dá o contato. Quando o usuário pressiona uma tecla, o painel ou o dome é empurrada para baixo através do furo do espaçador e entra em contato com a membrana de base, fechando o circuito possibilitando a circulação
+                            de corrente elétrica.
                         </p>
-                        <a href="./produtos/paineis.html" class="btn btn-danger border-1 mb-md-5 mb-sm-1">Saiba Mais</a>
-                    </div>
-                    <div class="col-lg-5 col-md-12 mt-5 mb-5 align-self-center ">
-                        <div class="produtos-content ">
-                            <img src="assets/img/jpg/painel.jpg " class="img-fluid rounded-3" alt=" ">
-                        </div>
-                    </div>
-                </div>
-
-                <div class="row justify-content-around mt-5 ">
-                    <div class="col-md-12 mb-5 ">
-                        <h2 class="text-white mb-2 bg-primary p-2 ">Etiquetas</h2>
-                    </div>
-                    <div class="col-lg-5 col-md-12 mt-5 mb-5 align-self-center ">
-                        <div class="produtos-content ">
-                            <img src="assets/img/jpg/etiqueta.jpg " class="img-fluid rounded-3" alt=" ">
-                        </div>
-                    </div>
-                    <div class="col-lg-7 col-md-12 align-self-center text-dark">
-                        <p style="width: 100%;font-size: 18px;text-align: start; ">As etiquetas técnicas são peças com informações sobre operação e segurança, especificações técnicas, indicação de entradas e saídas dos equipamentos.</p>
-                        <a href="./produtos/etiquetas.html" class="btn btn-danger border-1">Saiba Mais</a>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+
+        <section class="container-img-teclados ct-img-produtos">
+            <div class="container">
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="col">
+                        <div class="card">
+                            <img src="./assets/img/png/teclado1.png" class="card-img-top img-fluid" alt="...">
+                            <div class="card-body">
+                                <p class="card-text text-dark">ALTA QUALIDADE</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <img src="./assets/img/png/teclado2.png" class="card-img-top img-fluid" alt="...">
+                            <div class="card-body">
+                                <p class="card-text text-dark">EXCENLÊNCIA DE ATENDIMENTO</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <img src="./assets/img/png/teclado3.png" class="card-img-top img-fluid" alt="...">
+                            <div class="card-body">
+                                <p class="card-text text-dark">PREÇO JUSTO</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="f-mt">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12  mb-5">
+                        <h2 class="text-white mb-2 bg-primary p-2 f-mt">Painéis Frontais</h2>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-md-6 mb-5">
+                        <img src="./assets/img/jpg/painel.jpg" class="img-fluid " style="width: 500px;" alt="">
+                    </div>
+                    <div class="col-md-6 text-dark">
+                        <p style="width: 100%;font-size: 18px; text-align: start; ">São peças onde estão as teclas, visores e informações necessárias para a operação do equipamento. Painéis frontais podem ser confeccionados de diversas formas, planos ou com relevo, impressão em serigrafia ou digital que permite
+                            gradiente, fotos e ilustrações, policarbonato ou poliéster, com ou sem textura seletiva,<strong class="text-danger"> Frontais para manutenção de equipamentos</strong> (fora de linha ou importados). Os Painéis Frontais são produzidos
+                            com matéria prima de alta qualidade, e rigoroso controle de qualidade. São oferecidos com vários tipos de acabamento como:
+                        </p>
+
+                        <div class="container-fluid text-start text-dark div-span-produtos" style="font-size: 18px; ">
+                            <span>* Visores transparentes ou coloridos.</span><br>
+                            <span>* Texturização seletiva.</span><br>
+                            <span>* Impressão em quadricomia.</span><br>
+                            <span>* Alto relevo e molduras.</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="container-img-teclados ct-img-produtos">
+            <div class="container">
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="col">
+                        <div class="card">
+                            <img src="./assets/img/png/painel1.png" class="card-img-top img-fluid" alt="...">
+                            <div class="card-body">
+                                <p class="card-text text-dark">ALTA QUALIDADE</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <img src="./assets/img/png/painel2.png" class="card-img-top img-fluid" alt="...">
+                            <div class="card-body">
+                                <p class="card-text text-dark">EXCENLÊNCIA DE ATENDIMENTO</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <img src="./assets/img/png/painel3.png" class="card-img-top img-fluid" alt="...">
+                            <div class="card-body">
+                                <p class="card-text text-dark">PREÇO JUSTO</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="f-mt">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12  mb-5">
+                        <h2 class="text-white mb-2 bg-primary p-2">Etiquetas</h2>
+                    </div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-md-6 mb-5">
+                        <img src="./assets/img/jpg/etiqueta.jpg" class="img-fluid " style="width: 500px;" alt="">
+                    </div>
+                    <div class="col-md-6 text-dark">
+                        <p style="width: 100%;font-size: 18px; text-align: start; "><strong class="text-danger">As etiquetas técnicas são peças com informações</strong> sobre operação e segurança, especificações técnicas, indicação de entradas e saídas dos equipamentos. Podem ser confeccionados de diversas formas:
+                            - Policarbonato, poliéster, vinil, autodestrutível, void. - Impressão em serigrafia ou digital que permite gradiente, fotos e ilustrações. - Dados variáveis (números de série ou código de barras).
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="container-img-teclados ct-img-produtos mb-5">
+            <div class="container">
+                <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="col">
+                        <div class="card">
+                            <img src="./assets/img/png/etiqueta1.png" class="card-img-top img-fluid" alt="...">
+                            <div class="card-body">
+                                <p class="card-text text-dark">ALTA QUALIDADE</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <img src="./assets/img/png/etiqueta2.png" class="card-img-top img-fluid" alt="...">
+                            <div class="card-body">
+                                <p class="card-text text-dark">EXCENLÊNCIA DE ATENDIMENTO</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <img src="./assets/img/png/etiqueta3.png" class="card-img-top img-fluid" alt="...">
+                            <div class="card-body">
+                                <p class="card-text text-dark">PREÇO JUSTO</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <!--FIM SECTION PRODUTOS SECUNDARIA-->
 
     <!--INICIO FOOTER-->
@@ -136,7 +241,7 @@
         <div class="container text-center text-md-left ">
             <div class="row text-center text-md-left ">
                 <div class="col-md-12 col-lg-3 col-xl-3 mx-auto mt-lg-5 mb-5 ">
-                    <a href="# ">
+                    <a href="index.html">
                         <img src="./assets/img/logo-footer.png " alt="Logo DMD " style="width: 170px; ">
                     </a>
                 </div>
