--- a/contato.html
+++ b/contato.html
@@ -84,7 +84,7 @@
                         Estamos aqui para atender você, conhecer suas necessidades e responder suas dúvidas. Faça um orçamento sem compromisso.
                     </p>
                     <p class="font-weight-bold h5 mb-1 mt-5">
-                        <a href=""><i class="bi bi-whatsapp" style="color: green;"></i>&nbsp;<span class="text-dark"> (11) 96258 - 4708</span></a>
+                        <a href=""><i class="bi bi-whatsapp" style="color: green;"></i>&nbsp;<span class="text-dark span-fone"> (11) 96258 - 4708</span></a>
                         <p class="mb-4">
                             Seg. a Sex: 08hs às 17:30
                         </p>
