--- a/contato.html
+++ b/contato.html
@@ -83,15 +83,23 @@
                     <p class="text-dark">
                         Estamos aqui para atender você, conhecer suas necessidades e responder suas dúvidas. Faça um orçamento sem compromisso.
                     </p>
-                    <p class="font-weight-bold h5 mb-1 mt-5">
-                        <a href=""><i class="bi bi-whatsapp" style="color: green;"></i>&nbsp;<span class="text-dark span-fone"> (11) 96258 - 4708</span></a>
-                        <p class="mb-4">
+                    <div class="col-lg-12 mx-auto mt-5 text-start">
+                        <a href="contato.html ">
+                            <p class="text-primary w-100">
+                                <i class="bi bi-whatsapp"></i>&nbsp;<span> (11) 96258-4708</span>
+                            </p>
+                        </a>
+                        <a href="contato.html ">
+                            <p class="text-primary w-100 ">
+                                <i class="bi bi-envelope"></i><span>&nbsp; dmdmembranas@gmail.com</span>
+                            </p>
+                        </a>
+                    </div>
+                    <div>
+                        <p class="mb-5">
                             Seg. a Sex: 08hs às 17:30
                         </p>
-                    </p>
-                    <p class="font-weight-bold h5 mb-5">
-                        <a href=""><i class="bi bi-envelope" style="color: rgb(153, 105, 0);"></i><span class="span-email text-dark">&nbsp; dmdmembranas@gmail.com</span></a>
-                    </p>
+                    </div>
                     <p class="text-danger mb-5">
                         Os campos com * são obrigatorios, para o envio do formulário.
                     </p>
@@ -165,13 +173,13 @@
                 <div class="col-md-12 col-lg-3 col-xl-3 mx-auto mt-3 text-start ">
                     <h5 class="text-uppercase mb-4 font-weight-bold text-danger ">Contato</h5>
                     <a href="contato.html ">
-                        <p class="text-white ">
-                            <i class="bi bi-whatsapp "> </i>&nbsp;<span> (11) 96258-4708</span>
+                        <p class="text-white w-100">
+                            <i class="bi bi-whatsapp"></i>&nbsp;<span> (11) 96258-4708</span>
                         </p>
                     </a>
                     <a href="contato.html ">
                         <p class="text-white w-100 ">
-                            <i class="bi bi-envelope "> </i><span>&nbsp; dmdmembranas@gmail.com</span>
+                            <i class="bi bi-envelope"></i><span>&nbsp; dmdmembranas@gmail.com</span>
                         </p>
                     </a>
                 </div>
