--- a/contato.html
+++ b/contato.html
@@ -70,66 +70,37 @@
     </section>
     <!--FIM SECTION CONTATO INICIAL-->
     <!--INICIO SECTION CONTATO FORMULÁRIO-->
-    <section id="section-contato">
+    <section>
         <div class="container">
-            <div class="row align-items-lg-start ">
-                <div class="col-12  container-top-sobre">
-                    <h2 class="text-primary ">FALE CONOSCO</h2>
+            <div class="row">
+                <div class="container-top-contato">
+                    <h2 class="text-primary">FALE CONOSCO</h2>
                 </div>
-            </div>
-            <div class="row mt-5">
-                <div class="col-md-6 text-start text-dark mb-sm-5">
-                    <h4 class="text-danger">QUE TAL CONVERSARMOS UM POUCO?</h4>
-                    <p class="text-dark">
+                <div class="col-md-6 text-start">
+                    <h4 class="text-danger mt-5">QUE TAL CONVERSARMOS UM POUCO?</h4>
+                    <p class="text-dark w-100 px-2 mb-lg-4 p-frase-contato">
                         Estamos aqui para atender você, conhecer suas necessidades e responder suas dúvidas. Faça um orçamento sem compromisso.
                     </p>
-                    <div class="col-lg-12 mx-auto mt-5 text-start">
-                        <a href="contato.html ">
-                            <p class="text-primary w-100">
-                                <i class="bi bi-whatsapp"></i>&nbsp;<span> (11) 96258-4708</span>
-                            </p>
-                        </a>
-                        <a href="contato.html ">
-                            <p class="text-primary w-100 ">
-                                <i class="bi bi-envelope"></i><span>&nbsp; dmdmembranas@gmail.com</span>
-                            </p>
-                        </a>
-                    </div>
-                    <div>
-                        <p class="mb-5">
-                            Seg. a Sex: 08hs às 17:30
+                    <a href="contato.html">
+                        <p class="text-primary w-100 links-contato">
+                            <i class="bi bi-whatsapp"></i>&nbsp;<span> (11) 96258-4708</span>
                         </p>
-                    </div>
+                    </a>
+                    <a href="contato.html">
+                        <p class="text-primary w-100 links-contato">
+                            <i class="bi bi-envelope email"></i><span>&nbsp; dmdmembranas@gmail.com</span>
+                        </p>
+                    </a>
+                    <p class="mb-5 text-dark">
+                        Seg. a Sex: 08hs às 17:30
+                    </p>
+
                     <p class="text-danger mb-5">
                         Os campos com * são obrigatorios, para o envio do formulário.
                     </p>
-                </div>
-                <div class="col-md-6">
-                    <form class="row g-3 formulario p-3">
-                        <div class="col-12 mt-4">
-                            <input type="text" class="form-control" placeholder="Nome Completo *" id="validationDefault01" required>
-                        </div>
-                        <div class="col-12">
-                            <input type="text" class="form-control" placeholder="Nome da Empresa   (Opcional)">
-                        </div>
 
-                        <div class="col-12">
-                            <input type="tel" class="form-control" placeholder="Telefône (DDD) *" required>
-                        </div>
-                        <div class="col-12">
-                            <input type="text" class="form-control" placeholder="Email *" required>
-                        </div>
-                        <div class="col-12">
-                            <textarea name="" id="" cols="20" rows="4" class="p-3 w-100"></textarea>
-                        </div>
-                        <div class="d-grid gap-2 col-lg-6 col-md-12 mx-auto mb-lg-4 mb-md-3">
-                            <button class="btn btn-primary border-0 p-2 submit" type="submit">Enviar &nbsp;<i class="bi bi-send-fill"></i></button>
-                        </div>
-                        <div class="d-grid gap-2 col-lg-6 col-md-12  mx-auto mb-4">
-                            <button class="btn btn-danger border-0 p-2" type="reset">Limpar &nbsp;<i class="bi bi-x-circle-fill"></i></button>
-                        </div>
-                    </form>
                 </div>
+                <div class="col-md-6">formulario</div>
             </div>
         </div>
     </section>
