customizaçõa do formulário finalizado

--- a/contato.html
+++ b/contato.html
@@ -95,7 +95,7 @@
                         Seg. a Sex: 08hs às 17:30
                     </p>
 
-                    <p class="text-danger mb-3">
+                    <p class="text-danger mb-3 c-obrigatorios w-100">
                         Os campos com * são obrigatorios, para o envio do formulário.
                     </p>
 
